--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <title>Honda | CBR</title>
   </head>
   <body>
-    <header class="bg-header">
+    <header class="bg-header container-fluid py-5">
       <!-- NAVBAR -->
-      <nav class="navbar navbar-expand-lg navbar-light">
+      <nav class="navbar navbar-expand-lg navbar-dark">
         <button
           class="navbar-toggler ms-auto"
           type="button"
@@ -28,7 +28,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="container-fluid">
+        <div class="container">
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 me-5">
               <li class="nav-item">
@@ -58,7 +58,95 @@
           </div>
         </div>
       </nav>
+      <!-- INTRO -->
+      <div class="container-fluid pt-5">
+        <div class="row justify-content-md-center">
+          <div class="col-md-4 d-flex flex-column justify-content-center">
+            <p class="text-light">
+              Computer-controlled digital transistorized with electronic advance
+            </p>
+            <h1 class="text-light fw-600">Honda CBR 300R</h1>
+            <p class="text-light">
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+            <!-- Button trigger modal -->
+            <button
+              type="button"
+              class="btn nav-btn"
+              data-bs-toggle="modal"
+              data-bs-target="#exampleModal"
+            >
+              Purchase
+            </button>
+
+            <!-- Modal -->
+            <div
+              class="modal fade"
+              id="exampleModal"
+              tabindex="-1"
+              aria-labelledby="exampleModalLabel"
+              aria-hidden="true"
+            >
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">
+                      Purchase Confirmation
+                    </h5>
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="modal"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="modal-body">Do you want to proceed?</div>
+                  <div class="modal-footer">
+                    <button
+                      type="button"
+                      class="btn btn-secondary"
+                      data-bs-dismiss="modal"
+                    >
+                      Close
+                    </button>
+                    <button type="button" class="btn btn-primary">
+                      Save changes
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <img
+              src="./images/header-bike.png"
+              alt="header bike"
+              class="img-fluid"
+            />
+          </div>
+        </div>
+      </div>
     </header>
+
+    <main class="container text-center py-5">
+      <h1 class="fw-500">Featured Bikes 2021</h1>
+      <p style="color: #e76f51">Best bike collection</p>
+      <div class="d-flex justify-content-center"><hr /></div>
+      <div class="row pt-5">
+        <div class="col-12 col-md-4 grayscale">
+          <img class="w-75" src="./images/feature-bike.jpg" alt="feature" />
+        </div>
+        <div class="col-12 col-md-4">
+          <img class="w-75" src="./images/feature-bike.jpg" alt="feature" />
+        </div>
+        <div class="col-12 col-md-4 grayscale">
+          <img class="w-75" src="./images/feature-bike.jpg" alt="feature" />
+        </div>
+      </div>
+    </main>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
