--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./custom.css" />
+    <script
+      src="https://kit.fontawesome.com/7c2173ec38.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Honda | CBR</title>
   </head>
   <body>
@@ -130,22 +134,308 @@
       </div>
     </header>
 
+    <!-- FEATURE -->
     <main class="container text-center py-5">
       <h1 class="fw-500">Featured Bikes 2021</h1>
       <p style="color: #e76f51">Best bike collection</p>
       <div class="d-flex justify-content-center"><hr /></div>
-      <div class="row pt-5">
+      <div class="row py-5">
         <div class="col-12 col-md-4 grayscale">
-          <img class="w-75" src="./images/feature-bike.jpg" alt="feature" />
+          <img
+            class="w-75 mb-5"
+            src="./images/feature-bike.jpg"
+            alt="feature"
+          />
         </div>
         <div class="col-12 col-md-4">
-          <img class="w-75" src="./images/feature-bike.jpg" alt="feature" />
+          <img
+            class="w-75 mb-5"
+            src="./images/feature-bike.jpg"
+            alt="feature"
+          />
         </div>
         <div class="col-12 col-md-4 grayscale">
           <img class="w-75" src="./images/feature-bike.jpg" alt="feature" />
         </div>
       </div>
     </main>
+
+    <!-- NEWS -->
+    <section class="container py-5">
+      <h1 class="fw-500 text-center">Latest News</h1>
+      <div class="row py-5">
+        <div class="col-12 col-md-4 d-md-flex justify-content-md-center">
+          <div class="card mx-auto mb-3" style="width: 18rem">
+            <img src="./images/bike-1.png" class="card-img-top" alt="bike 1" />
+            <div class="card-body">
+              <h5 class="card-title">Ducati XDIAVEL S-73</h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <a href="#" class="btn read-btn">Read More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 d-md-flex justify-content-md-center">
+          <div class="card mx-auto mb-3" style="width: 18rem">
+            <img src="./images/bike-2.png" class="card-img-top" alt="bike 2" />
+            <div class="card-body">
+              <h5 class="card-title">Motorcycles & Scooters</h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <a href="#" class="btn btn-transparent read-btn">Read More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 d-md-flex justify-content-md-center">
+          <div class="card mx-auto mb-3" style="width: 18rem">
+            <img src="./images/bike-3.png" class="card-img-top" alt="bike 3" />
+            <div class="card-body">
+              <h5 class="card-title">2021 Honda CBR500R</h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <a href="#" class="btn btn-transparent read-btn">Read More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CLIENTS -->
+    <section class="container py-5 text-center">
+      <h1 class="fw-bold">
+        Happy <span style="color: #e76f51">Clients Says</span>
+      </h1>
+      <div class="row py-5">
+        <div class="col-12 col-md-4 d-md-flex justify-content-center">
+          <div class="card p-4 mx-auto mb-3" style="width: 18rem">
+            <div class="d-flex justify-content-center">
+              <img
+                src="./images/user-1.png"
+                class="card-img-top w-50 rounded-circle"
+                alt="user 1"
+              />
+            </div>
+            <div class="card-body">
+              <p class="card-text text-black-50">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+              <p class="text-info pt-2">Regina Miles</p>
+              <p class="text-black">Banker</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 d-md-flex justify-content-md-center">
+          <div class="card p-4 mx-auto mb-3" style="width: 18rem">
+            <div class="d-flex justify-content-center">
+              <img
+                src="./images/user-2.png"
+                class="card-img-top w-50 rounded-circle"
+                alt="user 2"
+              />
+            </div>
+            <div class="card-body">
+              <p class="card-text text-black-50">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+              <p class="text-info pt-2">Regina Miles</p>
+              <p class="text-black">Banker</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 d-md-flex justify-content-md-center">
+          <div class="card p-4 mx-auto mb-3" style="width: 18rem">
+            <div class="d-flex justify-content-center">
+              <img
+                src="./images/user-3.jpg"
+                class="card-img-top w-50 rounded-circle"
+                alt="user 3"
+                width="65px"
+                height="120px"
+              />
+            </div>
+            <div class="card-body">
+              <p class="card-text text-black-50">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+              <p class="text-info pt-2">Regina Miles</p>
+              <p class="text-black">Banker</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- FAQ -->
+    <section class="container py-5">
+      <h1 class="text-center fw-bold">
+        Frequently <span style="color: #e76f51">Asked Questions</span>
+      </h1>
+      <div class="row py-5">
+        <div class="col-12 col-md-5 mb-5">
+          <img class="w-75 ms-5" src="./images/faq.png" alt="faq" />
+        </div>
+        <div class="col-12 col-md-7">
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button
+                  class="accordion-button"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseOne"
+                  aria-expanded="true"
+                  aria-controls="collapseOne"
+                >
+                  What are the most important things I should know about riding
+                  a bike?
+                </button>
+              </h2>
+              <div
+                id="collapseOne"
+                class="accordion-collapse collapse show"
+                aria-labelledby="headingOne"
+                data-bs-parent="#accordionExample"
+              >
+                <div class="accordion-body">
+                  Safety First! Always obey the rules of the road. Obey all
+                  traffic signals, signs, and laws. Get in the mindset of
+                  “driving” your bike—not just “riding” your bike. This will
+                  help you be a more focused and legally compliant bike rider.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo"
+                  aria-expanded="false"
+                  aria-controls="collapseTwo"
+                >
+                  How can I tell if my helmet is old and I need a new one?
+                </button>
+              </h2>
+              <div
+                id="collapseTwo"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample"
+              >
+                <div class="accordion-body">
+                  Check in with your head. “Typically, you know if the helmet
+                  took a good hit, because a good hit to the helmet is a good
+                  hit to the head,” Parks says. “Just even the sound of the
+                  impact or the way your head felt—like if you hit hard enough
+                  to see stars—can tell you if the helmet should be replaced.”
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseThree"
+                  aria-expanded="false"
+                  aria-controls="collapseThree"
+                >
+                  My bike has been in storage is it safe to ride?
+                </button>
+              </h2>
+              <div
+                id="collapseThree"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingThree"
+                data-bs-parent="#accordionExample"
+              >
+                <div class="accordion-body">
+                  Before going on a long ride, take your bike around the block
+                  and make sure it is safe to ride. First of all, your tires are
+                  going to be deflated, it is normal after long periods of time
+                  on storage. Inflate them close to the recommended level, you
+                  can find that in the wall of the tire. Make sure your brakes
+                  work.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingFour">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseFour"
+                  aria-expanded="false"
+                  aria-controls="collapseFour"
+                >
+                  What rules should I follow when riding my bike?
+                </button>
+              </h2>
+              <div
+                id="collapseFour"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingFour"
+                data-bs-parent="#accordionExample"
+              >
+                <div class="accordion-body">
+                  You need to keep towards the left while also being in a safe
+                  position for the road and traffic conditions. Don't get too
+                  far left and don't weave in and out of parked cars. You need
+                  to be where you have a good view, and where other road users
+                  can see you. Allow traffic to pass as soon as you can.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- FOOTER -->
+    <footer class="container-fluid p-5 mt-5" style="background: #0b0d17">
+      <div class="row text-light">
+        <div class="col-12 col-md-7 ps-5">
+          <span>Download Now&nbsp;&nbsp;&nbsp;&nbsp;License</span><br />
+          <span
+            >About&nbsp;&nbsp;&nbsp;&nbsp; Features&nbsp;&nbsp;&nbsp;&nbsp;
+            Pricing&nbsp;&nbsp;&nbsp;&nbsp; Careers&nbsp;&nbsp;&nbsp;&nbsp;
+            Help&nbsp;&nbsp;&nbsp;&nbsp; Privacy policy</span
+          >
+          <p class="pt-5">© 2020 bike. All rights reserved</p>
+        </div>
+        <div class="col-12 col-md-5 d-flex flex-column align-items-center">
+          <h3>Get the App</h3>
+          <img class="w-25" src="./images/store.png" alt="store" />
+        </div>
+      </div>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
