--- a/index.html
+++ b/index.html
@@ -418,6 +418,27 @@
       </div>
     </section>
 
+    <!-- SOCIAL MEDIA . EXTRA PART 2 -->
+    <section
+      class="
+        container
+        text-center
+        py-5
+        border border-2 border-danger
+        rounded-pill
+      "
+    >
+      <h1 class="fw-bold">Follow <span style="color: #e76f51">Us On</span></h1>
+      <i class="fab fa-youtube mx-1"></i>
+      <i class="fab fa-twitter mx-1"></i>
+      <i class="fab fa-instagram mx-1"></i>
+      <i class="fab fa-dribbble mx-1"></i>
+      <i class="fab fa-facebook mx-1"></i>
+      <i class="fab fa-snapchat mx-1"></i>
+      <i class="fab fa-discord mx-1"></i>
+      <i class="fab fa-slack mx-1"></i>
+    </section>
+
     <!-- FOOTER -->
     <footer class="container-fluid p-5 mt-5" style="background: #0b0d17">
       <div class="row text-light">
