--- a/index.html
+++ b/index.html
@@ -418,6 +418,33 @@
       </div>
     </section>
 
+    <!-- LIVE PRODUCT DEMO . EXTRA PART 1 -->
+    <section class="container my-5" style="min-height: 500px">
+      <h1 class="fw-bold text-center mb-5" style="color: #e76f51">
+        Watch In Action
+      </h1>
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-5">
+          <div class="ratio ratio-16x9">
+            <iframe
+              src="https://www.youtube.com/embed/K09XNc6INsk"
+              title="YouTube video"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+        <div class="col-12 col-md-5 ms-md-5 mt-5 mt-md-0">
+          <div class="ratio ratio-16x9">
+            <iframe
+              src="https://www.youtube.com/embed/fehV52dFMo0"
+              title="YouTube video"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- SOCIAL MEDIA . EXTRA PART 2 -->
     <section
       class="
