--- a/index.html
+++ b/index.html
@@ -71,9 +71,12 @@
             </p>
             <h1 class="text-light fw-600">Honda CBR 300R</h1>
             <p class="text-light">
-              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-              amet sint. Velit officia consequat duis enim velit mollit.
-              Exercitation veniam consequat sunt nostrud amet.
+              If you’ve got a soft spot for sportbike design and Grand Prix
+              stylings, then the 2021 Honda CBR300R is your sweet spot between
+              form and function. It’s narrow, light, and a total blast to ride
+              around town and on twisty back roads. The single-cylinder engine
+              offers great fuel economy, with smooth and friendly torque
+              delivery.
             </p>
             <!-- Button trigger modal -->
             <button
@@ -170,8 +173,8 @@
             <div class="card-body">
               <h5 class="card-title">Ducati XDIAVEL S-73</h5>
               <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
-                fermentum amet faucibus sed id nisi lectus at.
+                Ducati renews the XDiavel range by introducing two new versions
+                for 2021: the XDiavel Dark and the XDiavel Black Star.
               </p>
               <a href="#" class="btn read-btn">Read More</a>
             </div>
@@ -183,8 +186,8 @@
             <div class="card-body">
               <h5 class="card-title">Motorcycles & Scooters</h5>
               <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
-                fermentum amet faucibus sed id nisi lectus at.
+                A scooter or motor scooter is a motorcycle with a step-through
+                frame and a platform for the rider's feet.
               </p>
               <a href="#" class="btn btn-transparent read-btn">Read More</a>
             </div>
@@ -196,8 +199,10 @@
             <div class="card-body">
               <h5 class="card-title">2021 Honda CBR500R</h5>
               <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
-                fermentum amet faucibus sed id nisi lectus at.
+                The Honda CBR500R is one of our most popular streetbikes, and
+                it’s easy to see why. It has just about the perfect combination
+                of performance, versatility and price. And for 2019, it gets
+                even better.
               </p>
               <a href="#" class="btn btn-transparent read-btn">Read More</a>
             </div>
@@ -223,16 +228,17 @@
             </div>
             <div class="card-body">
               <p class="card-text text-black-50">
-                Slate helps you see how many more days you need to work to reach
-                your financial goal for the month and year.
+                That was great to say that I have purchased this bike.It was
+                superb and awesome bike with best and top class features , good
+                in model with killer look.
               </p>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
-              <i class="far fa-star"></i>
-              <p class="text-info pt-2">Regina Miles</p>
-              <p class="text-black">Banker</p>
+              <i class="fas fa-star-half-alt"></i>
+              <p class="text-info pt-2">Muhammad Ashraf</p>
+              <p class="text-black">Businessman</p>
             </div>
           </div>
         </div>
@@ -247,16 +253,16 @@
             </div>
             <div class="card-body">
               <p class="card-text text-black-50">
-                Slate helps you see how many more days you need to work to reach
-                your financial goal for the month and year.
+                It's my first ever bike and turned out to be pretty good ,the
+                looks to this bike are one of the best in 200cc segment.
               </p>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
-              <i class="far fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
               <p class="text-info pt-2">Regina Miles</p>
-              <p class="text-black">Banker</p>
+              <p class="text-black">Housewife</p>
             </div>
           </div>
         </div>
@@ -273,15 +279,16 @@
             </div>
             <div class="card-body">
               <p class="card-text text-black-50">
-                Slate helps you see how many more days you need to work to reach
-                your financial goal for the month and year.
+                Its a beautiful bike to drive very smoothly .And its look is
+                very good .And smooth engine and like the power of the vehicle
+                .Usd fork is very beautiful to see .Because of it golden color.
               </p>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="far fa-star"></i>
-              <p class="text-info pt-2">Regina Miles</p>
+              <p class="text-info pt-2">Nikki Joe</p>
               <p class="text-black">Banker</p>
             </div>
           </div>
